--- a/less/forum.less
+++ b/less/forum.less
@@ -56,6 +56,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: cover;
+    background-position: center center;
 
     font-size: 2em;
 
