Mobile compatibility message Exit full screen at game end Use page reload on force exit

--- a/less/forum.less
+++ b/less/forum.less
@@ -96,3 +96,11 @@
         margin-bottom: 30px;
     }
 }
+
+.godot-mobile-compatibility {
+    display: none;
+
+    @media (max-device-width: @screen-phone-max) {
+        display: block;
+    }
+}
