Prevent touch message from appearing for a split second on page load

--- a/less/forum.less
+++ b/less/forum.less
@@ -139,8 +139,11 @@
     left: 0;
     right: 0;
 
+    // Hide until the touch class is available
+    display: none;
+
     // Only show message if the device supports touch
-    .no-touch & {
-        display: none;
+    .touch & {
+        display: block;
     }
 }
